background grid stuff

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
                     <div id="ribbon-current-title">Untitled</div>
                 </div>
             </div>
-            <div id="documentContainer">
-                <div id="document-main-area">
+            <div id="documentContainer" class="document-background-lined-narrow">
+                <div id="document-main-area" >
+                    <div id="backgroundPattern"></div>
                     <svg id="handwritingTop" preserveAspectRatio="xMinYMin meet" viewBox="0 0 100 100">
                     </svg>
                     <div id="textEditable" contenteditable="true"></div>
+
                 </div>
             </div>
             <div id="text-editor-settings" class="">
