--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Hyperiooo/Alrt.js@v0.1.1/src/alrt.css" />
 </head>
 
-<body class="ui-theme-light ui-theme-dark">
+<body class=" ui-theme-dark">
     <div id="app-container">
         <div id="main-workspace">
             <div id="workspace-header">
@@ -33,7 +33,7 @@
                     </div>
                 </div>
             </div>
-            <div id="document-container" >
+            <div id="document-container" class="document-background-grid" >
                 <div id="backgroundPattern"></div>
                 <div id="document-main-area" >
                     <svg id="handwritingTop" preserveAspectRatio="xMinYMin meet" viewBox="0 0 100 100">
@@ -99,16 +99,16 @@
                 </div>
                 <div class="divider"></div>
                 <div class="handwriting-settings-horizontal">
-                    <button class="setting-button">
+                    <button class="setting-button" id="draw-style-drawn" onclick="setDrawStyle('DRAWN')">
                         <i class="hi-brush-width-mono"></i>
                     </button>
-                    <button class="setting-button active">
+                    <button class="setting-button" id="draw-style-fine" onclick="setDrawStyle('FINE')">
                         <i class="hi-style-fine-mono"></i>
                     </button>
-                    <button class="setting-button">
+                    <button class="setting-button" id="draw-style-dash" onclick="setDrawStyle('DASH')">
                         <i class="hi-style-dash-mono"></i>
                     </button>
-                    <button class="setting-button">
+                    <button class="setting-button" id="draw-style-dot" onclick="setDrawStyle('DOT')">
                         <i class="hi-style-dot-mono"></i>
                     </button>
                 </div>
