--- a/src/note.html
+++ b/src/note.html
@@ -6,11 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redwood</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <script src="./scripts/perf.js"></script>
-    <script src="./scripts/ui.js"></script>
-    <script src="./scripts/texteditor.js"></script>
-    <script src="./scripts/editorMain.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/Hyperiooo/Hypericons@v0.7.9.2/fonts/hypericons.css">
     <script src="https://cdn.jsdelivr.net/gh/Hyperiooo/Alrt.js@v0.1.2/src/alrt.js"></script>
@@ -22,6 +17,12 @@
     <link rel="stylesheet" href="./styles/highlight-theme.css">
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <link rel="stylesheet" href="./styles/style.css">
+    <script src="./scripts/perf.js"></script>
+    <script src="./scripts/ui.js"></script>
+    <script src="./scripts/texteditor.js"></script>
+    <script src="./scripts/editorMain.js"></script>
+    <script src="./scripts/supabaseCore.js" defer></script>
 </head>
 
 <body class="ui-theme-light ui-accent-color-green">
